--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -780,7 +780,7 @@ roles.hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCo
 }
 
 # ?concept and ?relatedConcept both must have a code
-# If the query below is having a problem completing in stardog, use
+# If the query below is having a problem completing in graph db, use
 #    roles.all.complex.ncit=SKIP
 roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
