--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -94,7 +94,7 @@ nci:
     graph:
       host: ${GRAPH_DB_HOST:localhost}
       port: ${GRAPH_DB_PORT:5820}
-      db: ${GRAPH_DB_DB:NCIT2}
+      db: ${GRAPH_DB:NCIT2}
       queryUrl: ${GRAPH_DB_MONTHLY_QUERY_URL:http://${nci.evs.graph.host}:${nci.evs.graph.port}/${nci.evs.graph.db}/query}
       username: ${GRAPH_DB_USERNAME:REPLACE_WITH_USERNAME}
       password: ${GRAPH_DB_PASSWORD:REPLACE_WITH_PASSWORD}
