Handle changes to error with C6772 not having extensions

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -941,6 +941,59 @@ hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?ch
   } \
 }
 
+hierarchy.ncit=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    { \
+      { \
+        ?child a owl:Class . \
+        ?child rdfs:subClassOf ?parent . \
+        ?parent a owl:Class . \
+        ?child #{preferredNameCode} ?childLabel . \
+        ?child #{codeCode} ?childCode . \
+        ?parent #{preferredNameCode} ?parentLabel . \
+        ?parent #{codeCode} ?parentCode . \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
+      } \
+    } \
+    UNION \
+    { \
+      { \
+        ?child a owl:Class . \
+        ?child owl:equivalentClass ?y . \
+        ?y a owl:Class . \
+        ?y owl:intersectionOf ?y2 . \
+        ?y2 rdf:rest*/rdf:first ?parent . \
+        ?parent a owl:Class . \
+         ?child #{preferredNameCode} ?childLabel . \
+        ?child #{codeCode} ?childCode . \
+        ?parent #{preferredNameCode} ?parentLabel . \
+        ?parent #{codeCode} ?parentCode . \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
+      } \
+    } \
+    UNION \
+    { \
+      { \
+        ?child a owl:Class . \
+        ?child rdfs:subClassOf ?y . \
+        ?y a owl:Class . \
+        ?y owl:intersectionOf ?y2 . \
+        ?y2 rdf:rest*/rdf:first ?parent . \
+        ?parent a owl:Class . \
+        ?child #{preferredNameCode} ?childLabel . \
+        ?child #{codeCode} ?childCode . \
+        ?parent #{preferredNameCode} ?parentLabel . \
+        ?parent #{codeCode} ?parentCode . \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
+      } \
+    } \
+  } \
+}
+
 # Get all properties with literal values not URI values
 # limit to properties on owl:Class (can be expanded with UNION)
 all.properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
