--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -97,9 +97,9 @@ nci:
       connectTimeout: 30000
     opensearch:
       server:
-        host: ${OS_HOST:localhost}
-        port: ${OS_PORT:9201}
-        scheme: ${OS_SCHEME:http}
+        host: ${ES_HOST:localhost}
+        port: ${ES_PORT:9201}
+        scheme: ${ES_SCHEME:http}
       timeout: 200000
     sparql:
       timeoutSeconds: 60
