switch back env variables

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -95,7 +95,7 @@ nci:
       password: admin
       readTimeout: 500000
       connectTimeout: 30000
-    opensearch:
+    elasticsearch:
       server:
         host: ${OS_HOST:localhost}
         port: ${OS_PORT:9201}
