--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,7 +100,7 @@ nci:
       password: ${GRAPH_DB_PASSWORD:REPLACE_WITH_PASSWORD}
       readTimeout: ${GRAPH_DB_READ_TIMEOUT:60}
       connectTimeout: ${GRAPH_DB_CONNECT_TIMEOUT:60}
-    elasticsearch:
+    opensearch:
       server:
         host: ${ES_HOST:localhost}
         port: ${ES_PORT:9201}
