--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,13 @@ java {
   toolchain {
     languageVersion = JavaLanguageVersion.of(17)
   }
+  
+  compileJava {
+      options.compilerArgs << "-parameters"
+  }
+  compileTestJava {
+      options.compilerArgs << "-parameters"
+  }  
 }
 
 dependencies {
