add trivy-scan to transition develop branches

--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - develop
+      - develop-*
       - master
 
   workflow_dispatch:  # Allows manual runs from the GitHub UI
