EVSRESTAPI-623: FhirR*ClientSDKTests and associated github Postman.json retrieval

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -90,6 +90,7 @@ nci:
       metricsEnabled: ${METRICS_ENABLED:true}
       metricsDir: ${METRICS_DIR:/tmp}
       configBaseUri: ${CONFIG_BASE_URI:https://raw.githubusercontent.com/NCIEVS/evsrestapi-operations/develop/config/metadata}
+      sdkBaseUri: ${SDK_BASE_URI:https://raw.githubusercontent.com/NCIEVS/evsrestapi-client-SDK/develop}
       uiLicense: ${UI_LICENSE:ui-license}
     bulkload:
       historyDir: ${NCI_EVS_HISTORY_DIR:/tmp}
