single out owl:deprecated to support new chebi

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -84,9 +84,15 @@ axiom.qualifier=SELECT DISTINCT ?propertyValue \
 } \
 ORDER BY ?propertyValue
 
-properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
+properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
+    { \
+      ?x #{codeCode} "#{conceptCode}" . \
+      ?x owl:deprecated ?propertyValue . \
+      BIND(<http://www.w3.org/2002/07/owl#deprecated> AS ?property) \
+    } \
+    UNION \
     { \
       ?x #{codeCode} "#{conceptCode}" . \
       ?x ?property ?propertyValue . \
@@ -109,9 +115,16 @@ properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 } \
 ORDER BY ?propertyCode ?propertyLabel
 
-properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?propertyValue \
+properties.batch=SELECT DISTINCT ?conceptCode ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
+    { \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
+      ?x owl:deprecated ?propertyValue . \
+      BIND(<http://www.w3.org/2002/07/owl#deprecated> AS ?property) \
+    } \
+    UNION \
     { \
       ?x a owl:Class . \
       ?x #{codeCode} ?conceptCode . \
@@ -1005,6 +1018,8 @@ all.properties=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
       { ?property a owl:AnnotationProperty } \
       UNION \
       { ?property a owl:DatatypeProperty } \
+      UNION \
+      { FILTER(?property = owl:deprecated) } \
     } \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
